k8s/1-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cooperativa
  labels:
    name: cooperativa
