k8s/2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-cuentas
  namespace: cooperativa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-cuentas
  template:
    metadata:
      labels:
        app: mysql-cuentas
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          args:
            - --default-authentication-plugin=mysql_native_password
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --max_connections=1000
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-socios
  namespace: cooperativa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-socios
  template:
    metadata:
      labels:
        app: postgres-socios
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicio-cuentas
  namespace: cooperativa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicio-cuentas
  template:
    metadata:
      labels:
        app: microservicio-cuentas
    spec:
      containers:
        - name: microservicio-cuentas
          image: anvillarreal/microservicio-cuentas:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socios
  namespace: cooperativa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socios
  template:
    metadata:
      labels:
        app: socios
    spec:
      containers:
        - name: socios
          image: anvillarreal/socios:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cooperativa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: anvillarreal/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
